src/components/bottom-nav/style.scoped.scss
.bottom-nav-wrapper {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;

  box-shadow: 0 -2px 3rem rgba(0, 0, 0, .25);

  .bottom-nav-border {
    width: 100%;
    height: 1px;
    position: relative;

    &::after {
      z-index: -1;
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;

      background: var(--background-color);
      opacity: .75;
    }
  }

  .bottom-nav {
    height: $bottom-nav-height;

    display: flex;
    justify-content: space-around;

    backdrop-filter: blur(2rem);

    margin: 0;
    padding: 0;
    list-style: none;

    &::after {
      z-index: -1;
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;

      background: var(--background-color);
      opacity: .375;
    }

    .icon-wrapper {
      flex: 1;
      height: 3.5rem;
      padding-top: 1rem;
      padding-bottom: 1rem;

      display: flex;
      justify-content: center;
      align-items: center;

      .icon.badge {
        position: relative;

        &::after {
          position: absolute;
          top: -.3125rem;
          right: -.3125rem;

          content: "";
          width: .5rem;
          height: .5rem;
          background-color: var(--content-text-color);
          border-radius: 100%;
        }
      }
    }
  }
}

